--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -25,6 +25,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
   user-select: none;
   box-shadow: set-var(box-shadow, $theme-default, $common);
   border: 1px solid set-var(background-color__sub1, $theme-default, $common);
+  border-radius: 4px;
 
   .nav {
     height: 0px;
@@ -177,7 +178,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
   }
 
   .section-nav {
-    display: flex;
+    // display: flex;
     // padding: 0 14px;
     border-bottom: 1px solid set-var(tab__line__color, $theme-default, $common);
     height: 36px;
@@ -185,14 +186,23 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
 
     fluent-design-system-provider {
       background-color: $background-color;
-      --corner-radius: 0px !important;
-      --base-height-multiplier: 0;
       fluent-tabs {
+        .activeIndicator {
+          width: 40px !important;
+        }
+        .tablist {
+          padding-left: 20px !important;
+        }
         fluent-tab-panel {
           max-height: 360px;
           min-height: 360px;
           overflow-y: auto;
           overflow-x: hidden;
+          padding: 0px;
+          border-top: 1px solid set-var(tab__line__color, $theme-default, $common);
+          .overviewPanel {
+            max-width: var(--mgt-flyout-set-width, 340px);
+          }
 
           &::-webkit-scrollbar {
             height: 4em;
@@ -241,7 +251,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
 
       &:hover {
         background: set-var(tab__background-color--hover, $theme-default, $common);
-        border-color: set-var(tab__line__color--hover, $theme-default, $common);
+        // border-color: set-var(tab__line__color--hover, $theme-default, $common);
       }
 
       &.active {
@@ -260,11 +270,10 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
   }
 
   .message-section {
-    border-top: 1px solid set-var(tab__line__color, $theme-default, $common);
     border-bottom: 1px solid set-var(tab__line__color, $theme-default, $common);
     fluent-design-system-provider {
       background-color: $background-color;
-      margin-top: 15px;
+      margin: 4px 0px;
       fluent-text-field {
         width: 83%;
 
@@ -273,7 +282,12 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
           border: none;
         }
       }
+      .send-message-icon {
+        max-width: 15px;
+      }
       svg {
+        height: 17px;
+        width: 16px;
         margin-bottom: 6px;
       }
     }
@@ -364,6 +378,11 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
         display: flex;
         flex-direction: row;
         padding: 0 20px;
+        fluent-button {
+          --neutral-fill-stealth-rest: $background-color;
+          --accent-foreground-hover: $background-color;
+          --accent-foreground-active: $background-color;
+        }
       }
 
       .section__title {
@@ -413,6 +432,6 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
   }
 }
 
-fluent-tab-panel {
-  display: block;
-}
+// fluent-tab-panel {
+//   display: block;
+// }
