--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -187,7 +187,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
     fluent-design-system-provider {
       background-color: $background-color;
       fluent-tabs {
-        // grid-template-columns: minmax(21px, 200px);
+        grid-template-columns: minmax(1px, 0.1fr);
         .activeIndicator {
           width: 40px !important;
         }
