--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-organization/mgt-person-card-organization.scss
@@ -74,7 +74,7 @@
 
       &.org-member--target {
         background-color: set-var(background-color__sub2, $theme-default, $common);
-        border: 1px solid $commblue_primary;
+        border: 1px solid set-var(line-seperator__color, $theme-default, $common);
       }
 
       &.org-member--direct-report:not(:last-child) {
@@ -127,7 +127,8 @@
     }
 
     .org-member__separator {
-      border: 1px solid set-var(line-seperator__color, $theme-default, $common);
+      border-left: 1px solid set-var(line-seperator__color, $theme-default, $common);
+      background-color: set-var(line-seperator__color, $theme-default, $common);
       box-sizing: border-box;
       width: 0;
       margin: 0 50%;
@@ -154,7 +155,7 @@
           --font-size: 16px;
           --line2-text-transform: uppercase;
           --line2-font-size: 14px;
-          --line2-color: set-var(color__sub2, $theme-default, $common);
+          --line2-color: #797775;
           --avatar-size: 46px;
         }
       }
