--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
@@ -36,7 +36,7 @@
       }
 
       .section__title {
-        font-size: 16px;
+        font-size: 14px;
         color: set-var(title__color__sub2, $theme-default, $common);
       }
 
@@ -114,7 +114,7 @@
       }
 
       .data-list__item__date-range {
-        color: set-var(color__sub2, $theme-default, $common);
+        color: set-var(title__color__subtitle, $theme-default, $common);
         font-size: 10px;
         line-height: 12px;
       }
