--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-messages/mgt-person-card-messages.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-messages/mgt-person-card-messages.scss
@@ -53,7 +53,7 @@
 
         .message__from {
           font-size: 12px;
-          color: set-var(color__sub1, $theme-default, $common);
+          color: set-var(color__sub2, $theme-default, $common);
         }
 
         .message__message {
@@ -69,6 +69,7 @@
       }
 
       .message__date {
+        margin-top: 8px;
         font-size: 12px;
         color: set-var(color__sub2, $theme-default, $common);
         margin-left: 10px;
