update Dark theme missing cancel option

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
@@ -79,6 +79,10 @@ $file-upload-icon-button-background-color: var(--color, inherit);
   fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
 }
 
+:host .cancel-icon {
+  fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
+}
+
 :host .file-upload-Template {
   clear: both;
 }
