--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -8,6 +8,8 @@
 @import '../../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
 @import '../../../styles/shared-sass-variables.scss';
 
+$mgt-flyout-border-radius: var(--mgt-flyout-border-radius, 0px);
+
 .root {
   .scout-top {
     position: fixed;
@@ -27,6 +29,7 @@
     z-index: 9999999;
     opacity: 0;
     box-shadow: set-var(box-shadow, $theme-default, $common);
+    border-radius: $mgt-flyout-border-radius;
   }
 
   &.visible {
