Cursor to pointer when person-card is clickable Also changed default value of avatar-cursor to inherit.

--- a/packages/mgt-components/src/components/mgt-person/mgt-person.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.scss
@@ -13,7 +13,7 @@ $avatar-size-s: var(--avatar-size-s, var(--avatar-size, 24px));
 $avatar-size: var(--avatar-size, var(--avatar-size-s, 48px));
 $avatar-border: var(--avatar-border, 0);
 $avatar-border-radius: var(--avatar-border-radius, 50%);
-$avatar-cursor: var(--avatar-cursor, default);
+$avatar-cursor: var(--avatar-cursor, inherit);
 
 $initials-color: var(--initials-color, white);
 $initials-background-color: --initials-background-color;
@@ -65,6 +65,10 @@ mgt-person .person-root {
   display: flex;
   align-items: center;
   color: $color;
+
+  &.clickable {
+    cursor: pointer;
+  }
 
   .user-avatar {
     position: relative;
