--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-list.theme.scss
@@ -27,6 +27,11 @@ $file-list: (
     _var: --file-upload-button-background-color,
     light: rgb(243, 242, 241),
     dark: #006cbe
+  ),
+  upload__dialog__background-color: (
+    _var: --file-upload-dialog-background-color,
+    light: rgba(0, 0, 0, 0.1),
+    dark: rgba(0, 120, 212, 0.1)
   )
 );
 
