--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
@@ -9,31 +9,39 @@
 @import '../../../styles/shared-sass-variables.scss';
 @import './mgt-file-upload.theme.scss';
 
+$file-upload-dialog-background-color: set-var(upload__dialog__background-color, $theme-default, $file-upload);
 $file-upload-button-background-color: set-var(upload__button__background-color, $theme-default, $file-upload);
+$file-item-background-color--hover: set-var(list__item__background-color--hover, $theme-default, $file-upload);
 $file-upload-icon-button-background-color: var(--color, inherit);
+$file-list-box-shadow: var( --file-list-box-shadow, 0px 3.2px 7.2px rgba(0, 0, 0, 0.132), 0px 0.6px 1.8px rgba(0, 0, 0, 0.108) );
 
-:host .file-upload-button {
+:host .file-upload-area-button {
   width: 100%;
 
   div {
     float: var(--file-upload-button-float, right);
-    background-color: $file-upload-button-background-color;
-    width: 120px;
-    height: 32px;
     text-align: center;
     display: table;
     margin-top: 39px;
     margin-right: 16px;
     margin-left: 16px;
-    cursor: pointer;
-    font-size: $font-size;
-    font-family: $font-family;
   }
 
-  span {
+  fluent-button.file-upload-button {
     color: var(--file-upload-button-color, inherit);
     vertical-align: middle;
     display: table-cell;
+    background-color: $file-upload-button-background-color;
+    width: 120px;
+    height: 32px;
+    cursor: pointer;
+    font-size: $font-size;
+    font-family: $font-family;
+    position: relative;
+
+    &:hover {
+      background-color: $file-item-background-color--hover;
+    }
   }
 
   input {
@@ -58,37 +66,43 @@ $file-upload-icon-button-background-color: var(--color, inherit);
     vertical-align: middle;
     position: relative;
 
-    .file-upload-bar {
-      width: 180px;
-    }
-
     .file-upload-status {
       position: absolute;
       top: 12px;
       left: 16px;
     }
 
+    fluent-progress.file-upload-bar {
+      width: 180px;
+      margin-top: 10px;
+    }
+
     .file-upload-cancel {
       cursor: pointer;
       margin-left: 20px;
+    }
+
+    .file-upload-name {
+      width: auto;
+    }
+
+    .mgt-file-item {
+      --file-background-color: transparent;
+    }
+
+    .cancel-icon {
+      fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
     }
   }
 }
 
 :host .upload-icon {
   fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
-}
-
-:host .cancel-icon {
-  fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
+  height: 12px;
 }
 
 :host .file-upload-Template {
   clear: both;
-}
-
-:host .mgt-file-item {
-  --file-background-color: transparent;
 }
 
 :host #file-upload-border {
@@ -101,4 +115,76 @@ $file-upload-icon-button-background-color: var(--color, inherit);
   right: 0;
   z-index: 1;
   display: none;
+}
+
+/* The Modal (background) */
+:host .file-upload-dialog {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $file-upload-dialog-background-color;
+
+  .file-upload-dialog-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 24px;
+    width: 294px;
+    height: 196px;
+    margin-top: 100px; /* Location of the box */
+    font-size: $font-size;
+    font-family: $font-family;
+    box-shadow: $file-list-box-shadow;
+
+    div {
+      color: rgb(50, 49, 48);
+    }
+  }
+
+  .file-upload-dialog-content-text {
+    height: 170px;
+  }
+
+  .file-upload-dialog-Title {
+    margin-top: -12px;
+  }
+
+  fluent-checkbox.file-upload-dialog-check {
+  }
+
+  .file-upload-dialog-editor {
+    text-align: right;
+  }
+
+  .file-upload-dialog-close {
+    float: right;
+    cursor: pointer;
+
+    svg {
+      fill: rgb(50, 49, 48);
+      padding-right: 5px;
+    }
+  }
+
+  .file-upload-dialog-ok {
+    height: 32px;
+    min-width: 60px;
+    border: 1px solid rgb(138, 136, 134);
+    background-color: #006cbe;
+    color: white;
+    font-size: $font-size;
+    margin-right: 5px;
+  }
+
+  .file-upload-dialog-cancel {
+    height: 32px;
+    min-width: 82px;
+    border: 1px solid rgb(138, 136, 134);
+    background-color: white;
+    font-size: $font-size;
+  }
 }
