Style update on folder upload path

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
@@ -91,13 +91,15 @@ $file-list-box-shadow: var(
     .file-upload-name {
       width: auto;
     }
-    .mgt-file-item {
-      --file-background-color: transparent;
-    }
+    
     .cancel-icon {
       fill: var(--file-upload-button-color, $file-upload-icon-button-background-color);
     }
   }
+}
+
+:host .mgt-file-item {
+  --file-background-color: transparent;
 }
 
 :host .upload-icon {
