Sub component "mgt-file-upload" revision (#1268)
Co-authored-by: Beth Pan <beth_panx@hotmail.com>
Co-authored-by: Beth Pan <xupa@microsoft.com>
Co-authored-by: beth-panx <beth_panx@hotmail.com>
Co-authored-by: Nikola Metulev <nmetulev@users.noreply.github.com>

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.theme.scss
@@ -5,23 +5,13 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../styles/shared-sass-variables.scss';
+@import '../../../styles/shared-sass-variables.scss';
 
-$file-list: (
+$file-upload: (
   list__item__background-color--hover: (
     _var: --file-item-background-color--hover,
     light: rgba(0, 0, 0, 0.1),
     dark: #0078d4
-  ),
-  list__item__background-color--active: (
-    _var: --file-item-background-color--active,
-    light: rgba(0, 0, 0, 0.05),
-    dark: #238ada
-  ),
-  list__background-color: (
-    _var: --file-list-background-color,
-    light: $list__background-color--light,
-    dark: #424242
   ),
   upload__button__background-color: (
     _var: --file-upload-button-background-color,
@@ -55,4 +45,4 @@ $file-list: (
   )
 );
 
-@include create-themes($file-list);
+@include create-themes($file-upload);
