--- a/samples/proxy-provider-asp-net-mvc/graph-tutorial/Views/Shared/_Layout.cshtml
+++ b/samples/proxy-provider-asp-net-mvc/graph-tutorial/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Copyright (c) Microsoft Corporation. All rights reserved.
+<!-- Copyright (c) Microsoft Corporation. All rights reserved.
      Licensed under the MIT License. -->
 
 @{
@@ -34,7 +34,7 @@
 
     <style>
         mgt-login {
-            --color: white;
+            --button-color: white;
             --padding: 8px;
             --background-color--hover: transparent;
         }
