Fixes #1308 #1306 #1304 request feedback #1305 to @beth-panx

--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.theme.scss
@@ -13,6 +13,11 @@ $file-upload: (
     light: rgba(0, 0, 0, 0.1),
     dark: #0078d4
   ),
+  list__item__background-color--active: (
+    _var: --file-item-background-color--active,
+    light: rgba(0, 0, 0, 0.05),
+    dark: #238ada
+  ),
   upload__button__background-color: (
     _var: --file-upload-button-background-color,
     light: rgb(243, 242, 241),
