--- a/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
+++ b/packages/mgt-components/src/components/mgt-file-list/mgt-file-upload/mgt-file-upload.scss
@@ -24,6 +24,7 @@ $file-upload-dialog-primarybutton-background-color: set-var(
 );
 $file-upload-button-background-color: set-var(upload__button__background-color, $theme-default, $file-upload);
 $file-item-background-color--hover: set-var(list__item__background-color--hover, $theme-default, $file-upload);
+$file-item-background-color--active: set-var(list__item__background-color--active, $theme-default, $file-upload);
 $file-upload-icon-button-background-color: var(--color, inherit);
 $file-list-box-shadow: var(
   --file-list-box-shadow,
@@ -68,8 +69,6 @@ $file-list-box-shadow: var(
 }
 
 :host .file-upload-table {
-  display: table;
-  width: 260px;
   margin: var(--file-item-margin, 0 4px);
   .file-upload-cell {
     padding: 1px 0px 1px 1px;
@@ -109,6 +108,10 @@ $file-list-box-shadow: var(
     }
   }
 }
+:host .file-upload-table.upload {
+  display: table;
+  width: 260px;
+}
 
 :host .mgt-file-item {
   --file-background-color: transparent;
@@ -127,6 +130,10 @@ $file-list-box-shadow: var(
 }
 
 :host #file-upload-border {
+  display: none;
+}
+
+:host #file-upload-border.visible {
   border: var(--file-upload-border, dashed #0078d4 1px);
   background-color: var(--file-upload-background-color, rgba(0, 120, 212, 0.1));
   position: absolute;
@@ -135,20 +142,12 @@ $file-list-box-shadow: var(
   left: 0;
   right: 0;
   z-index: 1;
-  display: none;
+  display: inline-block;
 }
 
 /* The Modal (background) */
 :host .file-upload-dialog {
   display: none;
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: $file-upload-dialog-background-color;
 
   .file-upload-dialog-content {
     background-color: $file-upload-dialog-content-background-color;
@@ -210,5 +209,47 @@ $file-list-box-shadow: var(
     background-color: $file-upload-dialog-content-background-color;
     color: $file-upload-dialog-content-color;
     font-size: $font-size;
+  }
+}
+:host .file-upload-dialog.visible {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: $file-upload-dialog-background-color;
+  display: inline-block;
+}
+
+:host fluent-checkbox.file-upload-dialog-check.hide {
+  display: none;
+}
+
+:host .file-upload-dialog-success {
+  border-top: var(--file-item-border-top, none);
+  border-left: var(--file-item-border-left, none);
+  border-right: var(--file-item-border-right, none);
+  border-bottom: var(--file-item-border-bottom, none);
+  border-radius: var(--file-item-border-radius, 2px);
+  cursor: pointer;
+
+  &:hover,
+  &.focused {
+    background-color: $file-item-background-color--hover;
+
+    mgt-file {
+      --file-background-color: $file-item-background-color--hover;
+    }
+  }
+
+  &:active,
+  &.selected {
+    background-color: $file-item-background-color--active;
+
+    mgt-file {
+      --file-background-color: $file-item-background-color--active;
+    }
   }
 }
